--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,10 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+          <div class="profile-picture-container">
+            <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-picture" />
+            <img src="assets/images/meow.png" alt="Meow" class="profile-picture-hover" />
+          </div>
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
