--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,6 +138,7 @@ body {
     left: 0;
     opacity: 0;
     pointer-events: none;
+    max-width: 250px;
   }
 
   .profile-picture-container:hover .profile-picture {
